--- a/style.css
+++ b/style.css
@@ -334,12 +334,12 @@ color: #25D366;
 @media (max-width: 480px) {
   .navbar {
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
   }
 
   .nav-links a {
     margin-left: 0;
-    font-size: 1rem;
+    font-size: 2rem;
   }
 
   .home-section,
@@ -365,7 +365,7 @@ color: #25D366;
 /* Regular Smartphones (iPhone X, 11, 12, 13, 14, Samsung, Infinix etc.) */
 @media (max-width: 768px) {
   .navbar {
-    padding: 10px;
+    padding: 1rem 0.1rem;
   }
 
   .home-section h1 {
@@ -385,7 +385,7 @@ color: #25D366;
 }
 
 /* Tablets (iPad, Samsung Tab, etc.) */
-@media (max-width: 1024px) {
+@media (max-width: 1300px) {
   .projects-grid,
   .pricing-grid,
   .skills-grid {
@@ -394,6 +394,11 @@ color: #25D366;
 
   .navbar {
     padding: 20px;
+  }
+  .robot-3d{
+    scale: 0.08;
+    top: -20%;
+    right: 2%;
   }
 }
 
